03/02/2021:
	- Added round() definition to JPEGCompressor.cc to allow MSVC compilation: https://github.com/ruven/iipsrv/issues/205


27/06/2020:
	- Trailing query suffixes using the ? character are now stripped off the IIIF quality/format string.
	  Fixes: https://github.com/ruven/iipsrv/issues/145


26/06/2020:
	- JPEG encoding re-written. Now more efficient with compressed data put directly into
	  output memory with no intermediate buffering and superfluous memory-memory copying.
	  Change also fixes problem with large ICC profiles: https://github.com/ruven/iipsrv/issues/198


23/06/2020:
	- Fixed incorrect resizing in IIIF when provided with -ve parameters.
	  Fixes: https://github.com/ruven/iipsrv/issues/201.


01/05/2020:
	- Corrected media type for ld+json response in IIIF.cc.
	  Fixes: https://github.com/ruven/iipsrv/issues/199


06/03/2020:
	- Added % escaping to URL::escape() function to avoid problems with FCGI's printf()
	  Fixes https://github.com/ruven/iipsrv/issues/195


25/02/2020:
	- Change return of createHTTPHeader function due to lack on stringstream
	  copying in older versions of GCC.


21/02/2020:
	- New utility function in IIPResponse class to generate HTTP headers,
	  avoiding repetition within Zoomify, Deepzoom, IIIF code etc.


19/02/2020:
	- Added CORS headers to both Zoomify and Deepzoom XML info files


18/02/2020:
	- Added capture resolution info from JPEG2000 images when using Kakadu


17/02/2020:
	- Physical image resolution in DPI or pixels/cm is now extracted from source image
	  (TIFF only for now) and used to calculate appropriate DPI for current zooming level
	  and injected into output JPEG metadata (https://github.com/ruven/iipsrv/issues/191)


07/02/2020:
	- Added ability to change HTTP status code in IIPResponse class and
	  changed empty request reponse to 200 (https://github.com/ruven/iipsrv/issues/190)


27/01/2020:
	- Added content-negotiation to IIIF info.json retrieval. If an IIIF