@@ -1,3 +1,8 @@
+13/02/2021:
+	- Added logarithm transform processing to Processor.cc using the formula: out = c*log(1+in).
+	  Log transform can be requested by setting the gamma request to GAM=log or GAM=logarithm.
+
+
 03/02/2021:
 	- Added round() definition to JPEGCompressor.cc to allow MSVC compilation: https://github.com/ruven/iipsrv/issues/205
 
